# trello2beads

./: .coveragerc  .env.example  .gitignore  CHANGES.md  INSTALL.md  LICENSE  README.md  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  status_mapping.example.json  trello2beads.ps1  trello2beads.py  trello2beads.sh
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
tests/: conftest.py  test_smoke.py
tests/fixtures/: README.md  board_with_comments.json  board_with_references.json  empty_board.json  simple_board.json
tests/integration/: test_conversion.py
tests/unit/: test_beads_client.py  test_beads_writer.py  test_board_discovery.py  test_cli.py  test_converter.py  test_enhanced_card_reading.py  test_exceptions.py  test_list_boards.py  test_mapping.py  test_pagination.py  test_rate_limiter.py  test_retry_logic.py  test_trello_client.py  test_url_resolution.py
trello2beads/: __init__.py  beads_client.py  cli.py  converter.py  exceptions.py  logging_config.py  rate_limiter.py  trello_client.py
trello2beads/scripts/: cleanup_trello_import.py  reset_trello_import.py
