[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trello2beads"
version = "1.0.0"
description = "High-fidelity Trello board migration to beads issue tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brett Veenstra", email = "brettveenstra@gmail.com"}
]
keywords = ["trello", "beads", "migration", "issue-tracking", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.2.3,<3",  # Fixed security vulnerabilities (CVE-2025-50181, CVE-2025-66418, CVE-2025-66471)
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    # Type checking
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    # Linting
    "ruff>=0.1.0",
    # Security
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
    "filelock>=3.20.1",  # CVE fix: GHSA-w853-jp5j-5j7f (transitive dep)
    # Coverage
    "coverage>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/brettveenstra/trello2beads"
Issues = "https://github.com/brettveenstra/trello2beads/issues"

[project.scripts]
trello2beads = "trello2beads.cli:main"
trello2beads-cleanup = "trello2beads.scripts.cleanup_trello_import:main"
trello2beads-reset = "trello2beads.scripts.reset_trello_import:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=trello2beads",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["trello2beads"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true
